# pySigma-backend-crowdsec

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml  python-app.yml
sigma/: tester.py
sigma/backends/crowdsec/: __init__.py  crowdsec.py
sigma/pipelines/crowdsec/: __init__.py  crowdsec.py
tests/: test_backend_crowdsec.py  test_pipelines_crowdsec.py
