[tool.poetry]
name = "pySigma-backend-crowdsec"
version = "0.1.0"
description = "pySigma crowdsec backend"
authors = ["crowdsec"]
license = "LGPL-3.0-only"
repository = "https://github.com/buixor/pySigma-backend-crowdsec"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.14"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
